# XTEC

./: .gitignore  LICENSE  README.md  Tutorial_XTEC-d.ipynb  Tutorial_XTEC-s_with_label_smoothing.ipynb  Tutorial_XTEC-s_with_peak_averaging.ipynb  XTEC_Tutorial.ipynb  XTEC_Tutorial_Notebook.ipynb  XTEC_Tutorial_notebook.html  XTEC_Tutorial_notebook.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml
XTEC_codes/: GMM.py  GMM_kernels.py  Preprocessing.py
src/xtec/: GMM.py  GMM_sklearn.py  Preprocessing.py
src/xtec/plugins/: __init__.py
src/xtec/plugins/xtec/: BIC_score.py  GMM_clustering.py  __init__.py  cluster_data.py
xtec/: GMM.py  GMM_kernels.py  Preprocessing.py
