[metadata]
name = XTEC
description = X-ray Temperature Clustering
long_description = file: README.md   
long_description_content_type = text/markdown
url = https://cels.anl.gov/axmas/
download_url = https://github.com/KimGroup/XTEC
author = Jordan Venderley
maintainer = Krishnanand Mallayya
maintainer_email = krishnanandmallayya@gmail.com
license = MIT
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    numpy
    scipy
    scikit-learn
    matplotlib

[options.packages.find]
where = src
